--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,14 +6,14 @@ on:
       - main
 
 jobs:
-  check-version:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: kriasoft/check-version@v1
+  # check-version:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: kriasoft/check-version@v1
     
   publish:
-    needs: check-version
+    # needs: check-version
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
