--- a/package.json
+++ b/package.json
@@ -46,13 +46,15 @@
   ],
   "devDependencies": {
     "@size-limit/preset-small-lib": "^8.1.0",
+    "@types/jest": "^29.2.3",
     "husky": "^8.0.1",
+    "jest": "^29.3.1",
     "size-limit": "^8.1.0",
+    "ts-jest": "^29.0.3",
     "tsdx": "^0.14.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "web3": "^1.8.1"
   },
-  "dependencies": {
-    
-  }
+  "dependencies": {}
 }
