--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "husky": "^8.0.1",
     "size-limit": "^8.1.0",
     "tsdx": "^0.14.1",
+    "tslib": "^2.4.0",
     "typescript": "^4.8.4",
     "web3": "^1.8.1"
   },
